<resources>
    <string name="app_name">MyContactsBook</string>
    <string name="main_information">Main Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sub_information">Sub Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="contacts">Contacts</string>
    <string name="save">Save</string>
    <string name="key_in_phone">key in phone</string>
    <string name="key_in_email">key in email</string>
</resources>