<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/imageView_profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/round_shape" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <!-- Main Info -->

    <TextView
        android:id="@+id/textView_mainInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_small"
        android:text="@string/main_information"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/editText_firstName"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/edit_text_border"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/textView_firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_firstName"
        app:layout_constraintTop_toTopOf="@+id/textView_firstName" />

    <TextView
        android:id="@+id/textView_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/divider_main"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mainInfo" />

    <View
        android:id="@+id/divider_main"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/editText_lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_firstName" />

    <TextView
        android:id="@+id/textView_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/textView_subInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_main" />

    <!-- Sub Info -->
    <EditText
        android:id="@+id/editText_lastName"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/edit_text_border"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/textView_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_lastName"
        app:layout_constraintTop_toTopOf="@+id/textView_lastName" />

    <TextView
        android:id="@+id/textView_subInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorBackground"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_small"
        android:text="@string/sub_information"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastName" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/divider_sub"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_subInfo" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/edit_text_border"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:hint="@string/key_in_email"
        app:layout_constraintBottom_toBottomOf="@+id/textView_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_email"
        app:layout_constraintTop_toTopOf="@+id/textView_email" />

    <View
        android:id="@+id/divider_sub"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/editText_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/divider_footer"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_sub" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/edit_text_border"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:hint="@string/key_in_phone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_phone"
        app:layout_constraintTop_toTopOf="@+id/textView_phone" />

    <View
        android:id="@+id/divider_footer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_phone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>